@@ -34,6 +34,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, None)
         self.assertEqual(uv.message, 'Email link (not automatically checked)')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -47,6 +48,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, None)
         self.assertEqual(uv.message, 'Phone number (not automatically checked)')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -60,6 +62,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Empty link')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -73,6 +76,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, None)
         self.assertEqual(uv.message, 'Link to within the same page (not automatically checked)')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Anchor could not be checked')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -86,6 +90,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working internal link, working internal hash anchor")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Working anchor')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -100,6 +105,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, "Working internal link, broken internal hash anchor")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -113,6 +119,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working internal link, broken internal hash anchor")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -126,6 +133,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working temporary redirect, working internal hash anchor")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Working anchor')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -140,6 +148,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, "Working temporary redirect, broken internal hash anchor")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -153,6 +162,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working temporary redirect, broken internal hash anchor")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -166,6 +176,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "Working temporary redirect")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -179,6 +190,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Broken temporary redirect')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -192,6 +204,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working internal link')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -206,6 +219,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working internal link')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -219,6 +233,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Broken internal link')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -232,6 +247,7 @@ class InternalCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Invalid URL')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -254,6 +270,7 @@ class InternalMediaCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Missing Document')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -267,6 +284,7 @@ class InternalMediaCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working file link')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -283,6 +301,7 @@ class InternalMediaCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working file link')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -295,6 +314,7 @@ class InternalMediaCheckTestCase(TestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, 'Working file link')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, '')
@@ -311,6 +331,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -324,6 +345,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, True)
         self.assertEqual(uv.ssl_message, 'Valid SSL certificate')
@@ -337,6 +359,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'SSL Error: wrong version number')
+        self.assertEqual(uv.error_message, 'SSL Error: wrong version number')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, False)
         self.assertEqual(uv.ssl_message, 'Broken SSL certificate')
@@ -350,6 +373,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK, SSL certificate could not be verified')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'SSL certificate could not be checked')
@@ -363,6 +387,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK, broken external hash anchor, SSL certificate could not be verified')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'SSL certificate could not be checked')
@@ -376,6 +401,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, '404 Not Found, SSL certificate could not be verified')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'SSL certificate could not be checked')
@@ -389,6 +415,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -402,6 +429,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -415,6 +443,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, '301 Moved Permanently')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -428,6 +457,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '301 Moved Permanently')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -441,6 +471,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '302 Found')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -454,6 +485,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, '404 Not Found')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -467,6 +499,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, '404 Not Found')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -481,6 +514,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -494,6 +528,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -507,6 +542,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -520,6 +556,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, '200 OK')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -533,6 +570,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, 'Other Error: The read operation timed out')
+        self.assertEqual(uv.error_message, 'The read operation timed out')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -547,6 +585,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.last_checked, None)
         self.assertEqual(uv.message, '429 Too Many Requests')
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, '')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -560,6 +599,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "200 OK, working external hash anchor")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Working anchor')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -574,6 +614,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, "200 OK, broken external hash anchor")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -587,6 +628,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "200 OK, broken external hash anchor")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -600,6 +642,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "302 Found, working external hash anchor")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Working anchor')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -614,6 +657,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, False)
         self.assertEqual(uv.message, "302 Found, broken external hash anchor")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -627,6 +671,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "302 Found, broken external hash anchor")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Broken anchor')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -640,6 +685,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "200 OK")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Anchor could not be checked')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
@@ -653,6 +699,7 @@ class ExternalCheckTestCase(LiveServerTestCase):
         uv.check_url()
         self.assertEqual(uv.status, True)
         self.assertEqual(uv.message, "200 OK, failed to parse HTML for anchor")
+        self.assertEqual(uv.error_message, '')
         self.assertEqual(uv.anchor_message, 'Anchor could not be checked')
         self.assertEqual(uv.ssl_status, None)
         self.assertEqual(uv.ssl_message, 'Insecure link')
